--- a/mtbiker.htm
+++ b/mtbiker.htm
@@ -1,26 +1,8 @@
-MTBIKER magazín - Všetky články a videá        Eurobike 2023 - čo nového v cyklosvete (2. časť)
-            Test: Giro Insurgent Spherical - keď ide do tuhého
-            UDH pätka - čo je to a na čo je to dobré? 
-            Unboxing: Marin Gestalt 2 - jazdi, nech je cesta akákoľvek
-            Kde robím chyby v zjazde alebo ako byť rýchlejší
-            Video: Saganovu poctu nepokazil ani pád. MSR v cestnej cyklistike Tlmače 2023
-            Tipni si víťaza žltého dresu a vyhraj hodnotné ceny
-            Gravel, bikepacking a elektro - hlavné témy Eurobiku 2023
-            Tip na výlet: Lednicko-valtický areál s cyklovozíkom
-            Detská tour Petra Sagana -  pokračovanie série v Topoľčiankach
-            Pozvánka: Mesiac júl - po maratóne sa schladiť na kúpalisku
-            Eurobike 2023 - čo nového v cyklosvete (1. časť)
-    
-MTHIKER magazín - Všetky články a videá        Vrcholové pivko chutí najlepšie? 
-            K najvyššiemu značenému vrcholu Vysokých Tatier
-            Borovniak - nepoznaný klenot Slovenského raja
-            Útulne v útulni Sláviček
-            Pozvánka: Júl - prázdniny v plnom prúde
-            Video: Bežecké vesty - čo ponúkajú rôzne modely?
-            Ako si vybrať bežeckú vestu? 
-            Topánky na cestné výbehy - po asfalte aj bez otlakov
-            Ako sme sa (ne)vybrali na Jahňací štít
-            Túra v srdci Julských Álp – Malá Mojstrovka
-            Divočina na Šľuchte – nepoznanom vrchu Čiernej hory
-            Video: S deťmi na túre - skúsenosti s nosením
-    
+We've updated our Privacy and Cookies Policy
+                    Let us know you agree to cookies
+                    Let us know you agree to cookies
+                Accessibility linksNews NavigationTop StoriesFeatured ContentsFeatures and analysisWatch/ListenMore from the UKLatest UpdatesAround the BBCFind us hereBreakingBreaking newsNews NavigationBBC News ServicesExplore the BBC
+We've updated our Privacy and Cookies Policy
+                    Let us know you agree to cookies
+                    Let us know you agree to cookies
+                Accessibility linksNews NavigationTop StoriesFeatured ContentsFeatures and analysisWatch/ListenMore from the UKLatest UpdatesAround the BBCFind us hereBreakingBreaking newsNews NavigationBBC News ServicesExplore the BBC
