todo moved to excercises

--- a/mtbiker.htm
+++ b/mtbiker.htm
@@ -6,3 +6,29 @@ We've updated our Privacy and Cookies Policy
                     Let us know you agree to cookies
                     Let us know you agree to cookies
                 Accessibility linksNews NavigationTop StoriesFeatured ContentsFeatures and analysisWatch/ListenMore from the UKLatest UpdatesAround the BBCFind us hereBreakingBreaking newsNews NavigationBBC News ServicesExplore the BBC
+MTBIKER magazín - Všetky články a videá        Tip na výlet: Chorvátsko nie je len o mori 
+            Test: AGU Venture - bikepackingové tašky so štýlom
+            Denník cyklistu - stačí mesiac na prípravu? (1. časť)
+            Video: Bicykel dlhšie čistý a krajší - WELDTITE Rapid Ceramic Shield
+            Reportáž: Drásal 2023 - jubilejný ročník legendárneho maratónu
+            Domáca údržba - čo by nemalo chýbať v garáži cyklistu?
+            Eurobike 2023 - čo nového v cyklosvete (2. časť)
+            Test: Giro Insurgent Spherical - keď ide do tuhého
+            UDH pätka - čo je to a na čo je to dobré? 
+            Unboxing: Marin Gestalt 2 - jazdi, nech je cesta akákoľvek
+            Kde robím chyby v zjazde alebo ako byť rýchlejší
+            Video: Saganovu poctu nepokazil ani pád. MSR v cestnej cyklistike Tlmače 2023
+    
+MTHIKER magazín - Všetky články a videá        Video: Štiavnické vrchy - Tanád, Paradajs a menhiry 
+            Pozvánka: Kordícky Extrém - trailové šialenstvo v srdci Kremnických vrchov
+            Vrcholové pivko chutí najlepšie? 
+            K najvyššiemu značenému vrcholu Vysokých Tatier
+            Borovniak - nepoznaný klenot Slovenského raja
+            Útulne v útulni Sláviček
+            Pozvánka: Júl - prázdniny v plnom prúde
+            Video: Bežecké vesty - čo ponúkajú rôzne modely?
+            Ako si vybrať bežeckú vestu? 
+            Topánky na cestné výbehy - po asfalte aj bez otlakov
+            Ako sme sa (ne)vybrali na Jahňací štít
+            Túra v srdci Julských Álp – Malá Mojstrovka
+    
